# beer_lambert

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  Molecule.hs  NOTES  README.md
core/: CMakeLists.txt  environment.cpp  globals.hpp  gui.cpp  main.cpp  molecule.cpp  molecule.h  solute.cpp  solute.h  solvent.cpp  solvent.h
