CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Transmission)

LIST(APPEND CMAKE_MODULE_PATH cmake_modules)

FIND_PACKAGE(CGAL REQUIRED)
FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(Glog REQUIRED)


INCLUDE_DIRECTORIES(include)

ADD_SUBDIRECTORY(core)

ADD_EXECUTABLE(transmission.out core/main.cpp)

TARGET_LINK_LIBRARIES(transmission.out
    ${CGAL_LIBRARIES}
)

